2007-09-12	Joel Sherrill <joel.sherrill@OARcorp.com>

	PR 1257/bsps
	* irq/irq.c: Code outside of cpukit should use the public API for
	rtems_interrupt_disable/rtems_interrupt_enable. By bypassing the
	public API and directly accessing _CPU_ISR_Disable and
	_CPU_ISR_Enable, they were bypassing the compiler memory barrier
	directive which could lead to problems. This patch also changes the
	type of the variable passed into these routines and addresses minor
	style issues.

2007-07-10	Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* irq/irq_init.c: adapted to shared exception code

2007-07-06	Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* Makefile.am: adapted to shared exception code

2007-04-12	Ralf Corsépius <ralf.corsepius@rtems.org>

	* bsp_specs: Remove qrtems_debug.

2007-03-11	Joel Sherrill <joel@OARcorp.com>

	* startup/bspstart.c: Remove assignments of
	Cpu_table.do_zero_of_workspace to TRUE since TRUE is the default
	value in boot_card.c

2007-01-30	Till Straumann <strauman@slac.stanford.edu>

	* Makefile.am, preinstall.am,
	* vme/vmeconfig.c (removed), vme/VMEConfig.h (added):
	cleaned up vme support - use files from libbsp/powerpc/shared/vme
	and define BSP specifica in VMEConfig.h.
	Use VME DMA support implemented by vmeUniverse and
	libbsp/powerpc/shared/vme/vme_universe_dma.c

	* irq/irq.c, include/gen2.h:
	removed _BSP_vme_bridge_irq variable and BSP_PIC_DO_EOI definition.
	Support for VME IRQ software priorities was incomplete/incorrect
	on this BSP.

2006-12-02	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: New BUG-REPORT address.

2006-11-15	Joel Sherrill <joel@OARcorp.com>

	* Makefile.am: Merge c_rtems_main() into boot_card(). This eliminated a
	file and simplified initialization.

2006-10-17	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Remove superfluous -DASM.

2006-10-17	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Require autoconf-2.60. Require automake-1.10.
